--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -75,9 +75,8 @@ p {
   }
 }
 
-
-
 /* footer */
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
@@ -98,6 +97,24 @@ footer {
     li {
       float: left;
       margin-left: 15px;
+    }
+  }
+}
+
+@media(max-width: 800px){
+  footer{
+    small{
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul{
+      float: none;
+      padding: 0%;
+      li{
+        float: none;
+        margin-left: 0%;
+      }
     }
   }
 }
@@ -171,4 +188,10 @@ input {
   .form-control {
   color: $state-danger-text;
   }
+}
+
+/* Dropdown menu */
+
+.dropdown-menu.active {
+  display: block;
 }
