--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -34,7 +34,12 @@ textarea {
 
 /* typography */
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   line-height: 1;
 }
 
@@ -101,17 +106,17 @@ footer {
   }
 }
 
-@media(max-width: 800px){
-  footer{
-    small{
+@media (max-width: 800px) {
+  footer {
+    small {
       display: block;
       float: none;
       margin-bottom: 1em;
     }
-    ul{
+    ul {
       float: none;
       padding: 0%;
-      li{
+      li {
         float: none;
         margin-left: 0%;
       }
@@ -126,45 +131,48 @@ footer {
   float: left;
   width: 100%;
   margin-top: 45px;
-  }
+}
 
-  /* sidebar */
+/* sidebar */
 aside {
   section.user_info {
-  margin-top: 20px;
+    margin-top: 20px;
   }
   section {
-  padding: 10px 0;
-  margin-top: 20px;
-  &:first-child {
-  border: 0;
-  padding-top: 0;
+    padding: 10px 0;
+    margin-top: 20px;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.4em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+    }
   }
-  span {
-  display: block;
-  margin-bottom: 3px;
-  line-height: 1;
-  }
-  h1 {
-  font-size: 1.4em;
-  text-align: left;
-  letter-spacing: -1px;
-  margin-bottom: 3px;
-  margin-top: 0px;
-  }
-  }
-  }
-  .gravatar {
+}
+.gravatar {
   float: left;
   margin-right: 10px;
-  }
-  .gravatar_edit {
+}
+.gravatar_edit {
   margin-top: 15px;
-  }
+}
 
-  /* forms */
+/* forms */
 
-input, textarea, select, .uneditable-input {
+input,
+textarea,
+select,
+.uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
   margin-bottom: 15px;
@@ -175,7 +183,7 @@ input {
   height: auto !important;
 }
 
-#error_explanation{
+#error_explanation {
   color: red;
   ul {
     color: red;
@@ -186,7 +194,7 @@ input {
 .field_with_errors {
   @extend .has-error;
   .form-control {
-  color: $state-danger-text;
+    color: $state-danger-text;
   }
 }
 
@@ -219,5 +227,52 @@ input {
     overflow: auto;
     padding: 10px 0;
     border-bottom: 1px solid $gray-lighter;
+  }
+}
+
+/* microposts */
+
+.microposts {
+  list-style: none;
+  padding: 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+  .user {
+    margin-top: 5em;
+    padding-top: 0;
+  }
+  .content {
+    display: block;
+    margin-left: 60px;
+    img {
+      display: block;
+      padding: 5px 0;
+    }
+  }
+  .timestamp {
+    color: $gray-light;
+    display: block;
+    margin-left: 60px;
+  }
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+    margin-top: 5px;
+  }
+}
+
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
+
+span.image {
+  margin-top: 10px;
+  input {
+    border: 0;
   }
 }
